--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script src="./js/task-1.js" defer></script>
     <script src="./js/task-2.js" defer></script>
     <script src="./js/task-3.js" defer></script>
+    <script src="./js/task-4.js" defer></script>
 
     <style>
       body {
@@ -61,97 +62,6 @@
     </style>
   </head>
   <body>
-    <h1>Домашнє завдання Тема 1. Змінні та типи. Основи функцій</h1>
-    <!-- 1 -->
-    <section class="wrapper">
-      <h2>Задача 1. Замовлення дроїдів</h2>
-      <p>
-        Станція з продажу ремонтних дроїдів готова до запуску, залишилося написати програмне
-        забезпечення для відділу продажів.
-      </p>
-      <p>
-        Оголоси функцію <span>makeTransaction</span>, яка очікує два параметри, значення яких будуть
-        задаватися під час її виклику: •<span> quantity</span> — перший параметр, число, що містить
-        кількість замовлених дроїдів • <span>pricePerDroid</span> — другий параметр, число, що
-        містить вартість одного дроїда
-      </p>
-      <p>
-        Доповни код функції так, щоб вона повертала рядок з повідомленням про покупку ремонтних
-        дроїдів: <span>"You ordered quantity droids worth totalPrice credits!"</span>, де: •
-        <span>quantity </span>— це кількість замовлених дроїдів • <span>totalPrice</span> — це
-        загальна вартість замовлення, тобто вартість усіх замовлених дроїдів Візьми код нижче і
-        встав після оголошення своєї функції для перевірки коректності її роботи. У консоль будуть
-        виведені результати її роботи.
-      </p>
-      <ul>
-        <li>
-          console.log(makeTransaction(5, 3000)); // "You ordered 5 droids worth 15000 credits!"
-        </li>
-        <li>
-          console.log(makeTransaction(3, 1000)); // "You ordered 3 droids worth 3000 credits!"
-        </li>
-        <li>
-          console.log(makeTransaction(10, 500)); // "You ordered 10 droids worth 5000 credits!"
-        </li>
-      </ul>
-    </section>
-    <!-- 2 -->
-    <section>
-      <h2>Задача 2. Доставка товару</h2>
-      <p>
-        Оголоси функцію <span>getShippingMessage</span>, яка очікує три параметри, значення яких
-        будуть задаватися під час її виклику: • <span>country</span> — перший параметр, рядок, що
-        містить країну доставки •<span> price</span> — другий параметр, число, що містить загальну
-        вартість товару • <span>deliveryFee</span>
-        — третій параметр, число, що містить вартість доставки товару
-      </p>
-      <p>
-        Доповни код функції так, щоб вона повертала рядок з повідомленням про доставку товару в
-        країну користувача: <span>"Shipping to country> will cost totalPrice> credits"</span>, де: •
-        <span>country></span>— це країни доставки • <span>totalPrice></span> — це загальна вартість
-        замовлення, що включає вартість товару і його доставки Візьми код нижче і встав після
-        оголошення своєї функції для перевірки коректності її роботи. У консоль будуть виведені
-        результати її роботи.
-      </p>
-      <ul>
-        <li>
-          console.log(getShippingMessage("Australia", 120, 50)); // "Shipping to Australia will cost
-          170 credits"
-        </li>
-        <li>
-          console.log(getShippingMessage("Germany", 80, 20)); // "Shipping to Germany will cost 100
-          credits"
-        </li>
-        <li>
-          console.log(getShippingMessage("Sweden", 100, 20)); // "Shipping to Sweden will cost 120
-          credits"
-        </li>
-      </ul>
-    </section>
-    <!-- 3 -->
-    <section>
-      <h2>Задача 3. Ширина елемента</h2>
-      <p>
-        Оголоси функцію <span>getElementWidth</span>, яка очікує три параметри, значення яких будуть
-        задаватися під час її виклику: • <span>content</span>— перший параметр, ширина контенту •
-        <span>padding</span>— другий параметр, значення горизонтального падінгу для кожної зі сторін
-        • <span>border</span> — третій параметр, значення товщини бордера для кожної зі сторін
-        Значення всіх параметрів будуть рядками формату <span>Npx</span> де N — це довільне число,
-        ціле або дробове.
-      </p>
-      <p>
-        Доповни код функції так, щоб вона повертала число —загальну ширину елемента. При розрахунку
-        загальної ширини орієнтуйся на те, що значення box-sizing дорівнює <span>border-box</span>.
-      </p>
-      <p>
-        Візьми код нижче і встав після оголошення своєї функції для перевірки коректності її роботи.
-        У консоль будуть виведені результати її роботи.
-      </p>
-      <ul>
-        <li>console.log(getElementWidth("50px", "8px", "4px")); // 74</li>
-        <li>console.log(getElementWidth("60px", "12px", "8.5px")); // 101</li>
-        <li>console.log(getElementWidth("200px", "0px", "0px")); // 200</li>
-      </ul>
-    </section>
+    <h1>Домашнє завдання Тема 2. Розгалуження та цикли</h1>
   </body>
 </html>
